--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
+    "libxmljs": "^1.0.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
