--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "deps": "^1.0.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
+    "exif-parser": "^0.1.12",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.1.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "libxmljs": "^1.0.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -23,6 +26,8 @@
     "nodemailer": "^7.0.5",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
-    "serve-favicon": "^2.5.1"
+    "serve-favicon": "^2.5.1",
+    "sharp": "^0.34.3",
+    "unzipper": "^0.12.3"
   }
 }
